--- a/css/sin.css
+++ b/css/sin.css
@@ -106,6 +106,9 @@
  .divclr{
     background-color: #deeae926;
  }
+ .divclr2{
+    background-color: #e9f3f24d;
+ }
  .conf{
    background-color: #cfe3e24f;
    border-radius: 20%;
